# RelayBridge

./: .agent-session.md  .env.example  .gitignore  .rlhf-blocked  .rlhf-lastblock  Cargo.toml  OPENCODE.md  README.md  SECURITY.md  build.bat  deny.toml  dev.bat  package-lock.json  package.json  session-ses_1b04.md  vitest.workspace.ts
.github/: dependabot.yml
.github/workflows/: release.yml  rust-clippy.yml
.opencode/: opencode.jsonc
.playwright-mcp/: page-2026-05-22T18-01-00-061Z.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: prd-discord-to-global-relay.md  storyboard-discord-to-global-relay.md
.sisyphus/plans/: connector-management.md  execution-discord-to-global-relay.md  project-config-and-git-init.md  story-points-discord-to-global-relay.md
.sisyphus/run-continuation/: ses_1b041f8b1ffeC3aVKcpFqRban1.json
crates/bridge/: Cargo.toml
crates/bridge-core/: Cargo.toml
crates/bridge-core/src/: config.rs  db.rs  discord.rs  encryption.rs  error.rs  in_process.rs  lib.rs  manager.rs  state.rs  types.rs
crates/bridge-core/src/transport/: local_socket.rs  mod.rs  protocol.rs
crates/bridge/src/: health.rs  lib.rs  queue.rs  router.rs
crates/database/: Cargo.toml
crates/database/migrations/: 20240101000001_initial.sql
crates/database/src/: lib.rs
crates/discord-bot/: Cargo.toml
crates/discord-bot/src/: client.rs  event.rs  handler.rs  lib.rs
crates/gr-client/: Cargo.toml
crates/gr-client/src/: auth.rs  client.rs  lib.rs
crates/gr-client/tests/: mock_gr_tests.rs
docs/superpowers/plans/: 2026-05-22-discord-to-global-relay-bridge.md
prisma/: migrate-existing.ts  schema.prisma  seed.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  service.rs  tray.rs
tests/e2e/: connector-flow.test.ts  smoke.test.ts
tests/gr-client/: auth.test.ts  client.test.ts
tools/mock-gr-server/: server.js
