[package]
name = "discord-gr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Discord to Global Relay bridge — Tauri desktop app"

[lib]
name = "discord_gr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "discord-gr"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bridge-core = { path = "../crates/bridge-core" }
bridge = { path = "../crates/bridge" }
gr-client = { path = "../crates/gr-client" }
discord-bot = { path = "../crates/discord-bot" }
database = { path = "../crates/database" }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[profile.release]
panic = "abort"
codegen-units = 1

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"
