[package]
name = "bridge-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
zeroize = { workspace = true, features = ["zeroize_derive"] }
aes-gcm.workspace = true
keyring.workspace = true
async-trait.workspace = true
rand = { version = "0.9", features = ["std"] }
sqlx.workspace = true
