[package]
name = "bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
bridge-core = { path = "../bridge-core" }
discord-bot = { path = "../discord-bot" }
gr-client = { path = "../gr-client" }
database = { path = "../database" }

[dev-dependencies]
wiremock.workspace = true
