[package]
name = "discord-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
serenity = { workspace = true, features = ["client", "gateway", "http", "model", "cache"] }
bridge-core = { path = "../bridge-core" }

[dev-dependencies]
wiremock.workspace = true
